--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,12 @@ body {
   font-family: 'PT Sans', Arial, sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .App {
-  max-width: 1200px;
+  max-width: 1137px;
   margin: 0 auto;
 }
 
@@ -59,11 +63,69 @@ body {
   flex-wrap: wrap;
 }
 
+.title-section__heading {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.title__category {
+  margin-left: 10px;
+  padding: 3px;
+  border: 1px solid #000000;
+  border-radius: 2px;
+}
+
+.logo {
+  font-size: 36px;
+  font-weight: 700;
+  color: #000000;
+}
+
 .search__wrapper {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
   margin-top: 10px;
 }
 
 .search__input {
-  width: 80%;
+  width: 300px;
   padding: 8px;
+}
+
+.search__popup-loading {
+  position: absolute;
+  top: 47px;
+  right: 0;
+  width: 300px;
+  height: 200px;
+  background-color: #eeeeee;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search__popup-list {
+  position: absolute;
+  z-index: 10;
+  top: 47px;
+  right: 0;
+  min-height: 200px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.search__popup-list--empty {
+  display: none;
+}
+
+.search__popup-item {
+  background-color: #eeeeee;
+  color: #000000;
+  width: 300px;
+  padding: 8px;
+  border: 1px solid grey;
+  border-top: none;
 }
