--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ a {
   height: 402px;
 }
 
+.main__item--small {
+  height: 156px;
+}
+
 .main__desc-wrapper {
   display: none;
   position: absolute;
@@ -32,6 +36,11 @@ a {
   color: #ffffff;
   text-transform: uppercase;
   font-size: 18px;
+}
+
+.main__desc-wrapper--small {
+  height: 70px;
+  font-size: 14px;
 }
 
 .main__desc {
@@ -69,7 +78,9 @@ a {
 }
 
 .title__category {
+  display: inline-block;
   margin-left: 10px;
+  margin-bottom: 10px;
   padding: 3px;
   border: 1px solid #000000;
   border-radius: 2px;
@@ -79,53 +90,4 @@ a {
   font-size: 36px;
   font-weight: 700;
   color: #000000;
-}
-
-.search__wrapper {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  margin-top: 10px;
-}
-
-.search__input {
-  width: 300px;
-  padding: 8px;
-}
-
-.search__popup-loading {
-  position: absolute;
-  top: 47px;
-  right: 0;
-  width: 300px;
-  height: 200px;
-  background-color: #eeeeee;
-  color: #000000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.search__popup-list {
-  position: absolute;
-  z-index: 10;
-  top: 47px;
-  right: 0;
-  min-height: 200px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.search__popup-list--empty {
-  display: none;
-}
-
-.search__popup-item {
-  background-color: #eeeeee;
-  color: #000000;
-  width: 300px;
-  padding: 8px;
-  border: 1px solid grey;
-  border-top: none;
 }
