--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -43,7 +43,17 @@
   background-color: #eeeeee;
   color: #000000;
   width: 300px;
+  margin-top: -1px;
   padding: 8px;
   border: 1px solid grey;
-  border-top: none;
+}
+
+.search__popup-to-form {
+  background-color: #eeeeee;
+  color: #000000;
+  width: 306px;
+  margin-top: -1px;
+  padding: 5px;
+  border: 1px solid grey;
+  font-size: 11px;
 }
