--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,11 +1,14 @@
 .main__item {
   position: relative;
   display: inline-block;
-  height: 402px;
+  min-height: 402px;
 }
 
 .main__item--small {
-  height: 156px;
+  flex-grow: 0;
+  min-width: 110px;
+  min-height: 156px;
+  padding: 0;
 }
 
 .main__desc-wrapper {
@@ -14,7 +17,7 @@
   justify-content: center;
   align-items: center;
   bottom: 0;
-  width: 100%;
+  width: 284px;
   height: 100px;
   background-color: rgba(0,0,0,0.7);
   color: #ffffff;
@@ -24,7 +27,8 @@
 
 .main__desc-wrapper--small {
   height: 70px;
-  font-size: 14px;
+  width: 110px;
+  font-size: 12px;
 }
 
 .main__desc {
@@ -34,4 +38,8 @@
 
 .main__item:hover .main__desc-wrapper {
   display: flex;
+}
+
+.main__list {
+  width: 1137px;
 }
