--- a/src/css/Title.css
+++ b/src/css/Title.css
@@ -1,10 +1,21 @@
-.title {
+.title__main {
   display: flex;
 }
 
+.title__poster {
+  width: 390px;
+  height: 554px;
+}
+
 .title__info {
-  min-height: 780px;
   padding: 30px;
+  padding-top: 0px;
+}
+
+.title__header {
+  margin-top: 0px;
+  font-size: 24px;
+  text-transform: uppercase;
 }
 
 .title-section {
@@ -23,17 +34,31 @@
   font-weight: 700;
 }
 
+.title-section__value {
+  margin: 0;
+}
+
 .title__category {
   display: inline-block;
-  margin-left: 10px;
-  margin-bottom: 10px;
+  margin: 10px 0 10px 10px;
   padding: 3px;
   border: 1px solid #000000;
   border-radius: 2px;
 }
 
-.logo {
-  font-size: 36px;
-  font-weight: 700;
-  color: #000000;
+.title__review-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.title__review-item {
+}
+
+.title__review-author {
+  margin-right: 15px;
+}
+
+.title__review-content {
+  margin: 0;
 }
