--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -16,36 +16,40 @@
 }
 
 .main__desc-wrapper {
-  display: none;
+  display: flex;
   position: absolute;
   justify-content: center;
   align-items: center;
   bottom: 0;
   width: 284px;
-  height: 100px;
+  height: 0;
   background-color: rgba(0,0,0,0.7);
-  color: #ffffff;
+  color: transparent;
   text-transform: uppercase;
   font-size: 18px;
+  transition-timing-function: ease-in;
+  transition: 0.2s;
+}
+
+.main__item:hover .main__desc-wrapper {
+  height: 100px;
+  color: #ffffff;
 }
 
 .main__desc-wrapper--small {
-  height: 70px;
+  height: 0;
   width: 110px;
   font-size: 12px;
+}
+
+.main__item:hover .main__desc-wrapper--small {
+  height: 70px;
+  color: #ffffff;
 }
 
 .main__desc {
   margin: 0;
   text-align: center;
-}
-
-.main__item:hover .main__desc-wrapper {
-  display: flex;
-}
-
-.main__list {
-  width: 1137px;
 }
 
 .main__button-section {
