--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -24,27 +24,27 @@
   width: 284px;
   height: 0;
   background-color: rgba(0,0,0,0.7);
-  color: transparent;
+  color: #ffffff;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 0;
   transition-timing-function: ease-in;
   transition: 0.2s;
 }
 
 .main__item:hover .main__desc-wrapper {
   height: 100px;
-  color: #ffffff;
+  font-size: 18px;
 }
 
 .main__desc-wrapper--small {
   height: 0;
   width: 110px;
-  font-size: 12px;
+
 }
 
 .main__item:hover .main__desc-wrapper--small {
   height: 70px;
-  color: #ffffff;
+  font-size: 12px;
 }
 
 .main__desc {
