--- a/src/css/Title.css
+++ b/src/css/Title.css
@@ -52,6 +52,7 @@
 
 .title__review-list {
   margin: 0;
+  margin-top: 20px;
   padding: 0;
   list-style: none;
 }
@@ -67,4 +68,35 @@
   margin: 0;
   transition-timing-function: ease-in;
   transition: 0.2s;
+}
+
+.modal-overlay {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0,0,0,0.5);
+}
+
+.modal-window-wrapper {
+  position: fixed;
+  z-index: 1010;
+  top: 40px;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+}
+
+.modal-window {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 891px;
+  height: 500px;
+  border: none;
 }
