--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -66,3 +66,14 @@
   width: 100%;
   margin-bottom: 20px;
 }
+
+
+.categories {
+  max-height: 715px;
+}
+
+.categories__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
