--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -14,6 +14,7 @@
   position: relative;
   display: inline-block;
   min-height: 402px;
+  min-width: 284px;
 }
 
 .main__item--small {
@@ -30,28 +31,16 @@
   align-items: center;
   bottom: 0;
   width: 284px;
-  height: 0;
-  background-color: rgba(0,0,0,0.7);
+  height: 100px;
+  background-color: rgba(0,0,0,0.5);
   color: #ffffff;
   text-transform: uppercase;
-  font-size: 0;
-  transition-timing-function: ease-in;
-  transition: 0.2s;
-}
-
-.main__item:hover .main__desc-wrapper {
-  height: 100px;
   font-size: 18px;
 }
 
 .main__desc-wrapper--small {
-  height: 0;
-  width: 110px;
-
-}
-
-.main__item:hover .main__desc-wrapper--small {
   height: 70px;
+  width: 110px;
   font-size: 12px;
 }
 
