--- a/src/css/Title.css
+++ b/src/css/Title.css
@@ -84,30 +84,21 @@
 }
 
 .modal-overlay {
-  display: block;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1000;
-
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
 
   background: rgba(0,0,0,0.5);
 }
 
-.modal-window-wrapper {
-  position: fixed;
-  z-index: 1010;
-  top: 80px;
-  left: 0;
-  right: 0;
-  background-color: transparent;
-}
-
 .modal-window {
   display: block;
-  margin: 0 auto;
+  margin-top: 80px;
   width: 80vw;
   height: 45vw;
   max-width: 890px;
