--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -51,7 +51,7 @@
 
 .main__button-section {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   margin-bottom: 20px;
 }
