--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -56,18 +56,11 @@
   margin-bottom: 20px;
 }
 
-@media (max-width: 500px) {
-  .main__button-advanced {
-    display: none;
-  }
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin: 8px 0;
 }
-
-@media (min-width: 501px) {
-  .main__button-basic {
-    display: none;
-  }
-}
-
 
 .categories {
   max-height: 715px;
