--- a/src/css/Title.css
+++ b/src/css/Title.css
@@ -4,6 +4,14 @@
 
 .title__poster {
   overflow:hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.title__poster-image {
+  width: 390px;
+  height: 554px;
 }
 
 .title__info {
@@ -110,4 +118,31 @@
   max-width: 890px;
   max-height: 500px;
   border: none;
+}
+
+.modal-content {
+  padding: 20px;
+}
+
+.rating {
+  unicode-bidi: bidi-override;
+  font-size: 24px;
+  direction: rtl;
+}
+
+.rating > span {
+  display: inline-block;
+  position: relative;
+  width: 1.1em;
+}
+
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+   content: "\2605";
+   position: absolute;
+}
+
+.star-selected:before {
+  content: "\2605";
+  position: absolute;
 }
